testdata/baselines/reference/submodule/conformance/tsxSpreadAttributesResolution4.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (1 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface PoisonedProp {
        x: string;
        y: 2;
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    const obj: PoisonedProp = {
        x: "hello world",
        y: 2
    };
    
    // OK
    let p = <Poisoned {...obj} />;
    
    class EmptyProp extends React.Component<{}, {}> {
        render() {
            return <div>Default hi</div>;
        }
    }
    
    // OK
    let j: any;
    let e1 = <EmptyProp {...{}} />;
    let e2 = <EmptyProp {...j} />
    let e3 = <EmptyProp {...{ ref: (input) => { this.textInput = input; } }} />
    let e4 = <EmptyProp data-prop />
    let e5 = <EmptyProp {...{ "data-prop": true}} />